Limpieza sonarlint